--- a/Javascript/05-variables.html
+++ b/Javascript/05-variables.html
@@ -10,16 +10,35 @@
         console.log(`Cart Quantity: ${cartquantity}`)"> Show Quantity </button>
 
         <button onclick="
+        cartquantity>=10 ? 
+        alert('The cart is full. Max Items: 10.') :
         cartquantity = cartquantity + 1;
-        console.log(`Cart Quantity: ${cartquantity}`)"> Add to Cart</button>
+        console.log(`Cart Quantity: ${cartquantity}`);
+        "> Add to Cart </button>
 
         <button onclick="
+        cartquantity>=9 ? 
+        alert('The cart is full. Max Items: 10.') :
         cartquantity = cartquantity + 2;
         console.log(`Cart Quantity: ${cartquantity}`)">+2</button>
 
         <button onclick="
+        cartquantity>=8 ? 
+        alert('The cart is full. Max Items: 10.') :
         cartquantity = cartquantity + 3;
         console.log(`Cart Quantity: ${cartquantity}`)">+3</button>
+
+        <button onclick="
+        cartquantity<=0 ? 
+        alert('Not enough items in the cart.') :
+        cartquantity --;
+        console.log(`Cart Quantity: ${cartquantity}`)">-1</button>
+
+        <button onclick="
+        cartquantity <= 1 ? 
+        alert('Not enough items in the cart.') :
+        cartquantity -= 2;
+        console.log(`Cart Quantity: ${cartquantity}`)">-2</button>
 
         <button onclick="
         cartquantity = cartquantity - cartquantity;
